Improve service and pipeline
- Use Tkrzw in the service
- Allow usage of MD5 IDs in the service
- Allow usage of ga4gh IDs in the service
- Use 32G and 2 hours time for the pipeline
- Change pipeline Perl code to use less RAM

--- a/pipeline/nextflow/config/prod.config
+++ b/pipeline/nextflow/config/prod.config
@@ -14,7 +14,7 @@ profiles {
     slurm {
         process.executor = 'slurm'
         process.queue = 'production'
-        process.time = '30 min'
+        process.time = '2.hour'
         process.scratch = "$NOBACKUP_DIR/nextflow/scratch"
         process.log = "$NOBACKUP_DIR/nextflow/logs/ensembl-refget/production.log"
     }
