Include CDNA, CDS and PEP data
- Add CDNA, CDS and PEP data to pipeline. This is read from the dump
  files for FTP and transformed into the same layout and format that we
  have for the genomic sequences.
- Include the full relative path to a sequence file in the DB
- Adapt service to this
- Make steps run in parallel
- Include clean up with each step

--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 pipeline/venv/
-pipeline/work/
-pipeline/.nextflow/
-pipeline/.nextflow*
+**/nextflow/work
+.nextflow*
+.nextflow/
