--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,7 @@
-#fastapi
-#pydantic
-indexed_zstd
-#cachetools
-#tkrzw
+cachetools==5.3.3
+fastapi==0.111.0
+indexed_zstd==1.6.1
+pydantic==2.8.2
+starlette==0.37.2
+# Installed through apt since not on pypi
+#tkrzw==0.1.29
