--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,3 +1,21 @@
+# See the NOTICE file distributed with this work for additional information
+# regarding copyright ownership.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# pyproject.toml -- Ensembl RefGet project configuration
+
+## Generic configuration
+
 [build-system]
 requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
@@ -8,6 +26,10 @@ version = "1.0.1"
 description = "A refget server"
 readme = "README.md"
 requires-python = ">= 3.10"
+authors = [
+    {name = "Ensembl", email = "dev@ensembl.org"},
+]
+license = {text = "Apache License 2.0"}
 
 # Also will need tkrzw-python which in turn will need the C++ library with a
 # matching version.
